[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/font/Course & Topic Selection.png" type="Texture" id=1]
[ext_resource path="res://assets/widgets/triangle.png" type="Texture" id=2]
[ext_resource path="res://assets/font/GameFont_Homepage.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/widgets/play_button.png" type="Texture" id=4]
[ext_resource path="res://quiz/CourseSelection/CourseSelection.gd" type="Script" id=5]
[ext_resource path="res://assets/font/RegisterPageEmailPopup.tres" type="DynamicFont" id=6]
[ext_resource path="res://assets/theme/select_button_theme.tres" type="StyleBox" id=7]
[ext_resource path="res://assets/theme/non_select_button_theme.tres" type="StyleBox" id=8]

[node name="CourseSelection" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopicList" type="ItemList" parent="."]
anchor_left = 0.235
anchor_top = 0.303
anchor_right = 0.753
anchor_bottom = 0.736
margin_left = -0.159851
margin_top = -8.42998
margin_right = 0.408142
margin_bottom = -0.230011
allow_reselect = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupDialog" type="PopupDialog" parent="."]
anchor_left = 0.195
anchor_top = 0.358
anchor_right = 0.806
anchor_bottom = 0.723
margin_left = 0.23558
margin_top = -0.148209
margin_right = -0.428467
margin_bottom = -0.148224
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PopupDialog"]
anchor_right = 0.992
anchor_bottom = 0.991
margin_left = 1.25995
margin_top = 5.66962
margin_right = 1.25995
margin_bottom = 5.64061
custom_fonts/font = ExtResource( 3 )
text = "Loading Courses..."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Heading" type="Sprite" parent="."]
position = Vector2( 509.298, 53.7343 )
scale = Vector2( 0.868098, 0.922619 )
texture = ExtResource( 1 )

[node name="LeftButton" type="TextureButton" parent="."]
anchor_left = 0.066
anchor_top = 0.45
anchor_right = 0.172
anchor_bottom = 0.632
margin_left = -9.584
margin_right = -0.128006
margin_bottom = -0.200012
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="LeftButton"]
anchor_right = 1.081
anchor_bottom = 1.105
margin_right = 665.442
margin_bottom = 739.555
rect_scale = Vector2( 0.15, 0.14 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightButton" type="TextureButton" parent="."]
anchor_left = 0.812
anchor_top = 0.5
anchor_right = 0.909
anchor_bottom = 0.648
margin_left = -5.48804
margin_top = 1.0
margin_right = 13.184
margin_bottom = 0.200012
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="RightButton"]
anchor_left = 0.081
anchor_top = -0.12
anchor_right = 1.081
anchor_bottom = 1.105
margin_left = -2.38368
margin_top = -12.5468
margin_right = 671.806
margin_bottom = 716.328
rect_scale = Vector2( 0.15, 0.14 )
texture = ExtResource( 2 )
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CourseTitle" type="Label" parent="."]
anchor_left = 0.235402
anchor_top = -0.256184
anchor_right = 0.405324
anchor_bottom = 0.743816
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Course Title"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="SubmitSelection" type="TextureButton" parent="."]
anchor_left = 0.439
anchor_top = 0.765
anchor_right = 0.566
anchor_bottom = 0.877
margin_left = -36.536
margin_top = -3.05176e-05
margin_right = 0.415955
margin_bottom = -0.200012
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="SubmitSelection"]
anchor_left = 0.154
anchor_top = 0.013
anchor_right = 0.946
anchor_bottom = 1.311
margin_left = 9.05
margin_top = 0.168
margin_right = 98.45
margin_bottom = 50.096
rect_scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CourseHTTPRequest" type="HTTPRequest" parent="."]

[node name="ReturnButton" type="Button" parent="."]
margin_left = 70.6353
margin_top = 112.68
margin_right = 190.635
margin_bottom = 167.68
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/focus = ExtResource( 7 )
custom_styles/normal = ExtResource( 8 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ReturnButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 6 )
text = "Return"
align = 1
valign = 1

[node name="TopicListHTTPRequest" type="HTTPRequest" parent="."]
[connection signal="button_down" from="ReturnButton" to="." method="_on_ReturnButton_button_down"]
